# bazel_multiarch_experiment

./: BUILD.bazel  README.md  WORKSPACE  bazel-bazel_multiarch_experiment  bazel-bin  bazel-out  bazel-testlogs  embedded_defs.bzl
